added get, update and delete user APIs and rearranged APIs
